--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,11 @@ server/testmusic1.mp3
 server/testmusic2.mp3
 server/testmusic3.mp3
 server/testmusic4.mp3
+server/groupimage/
+server/voice/1574914327833.mp3
+server/voice/1574915760812.PNG
+server/voice/1574914341147.mp3
+server/voice/1574914194254.mp3
+server/voice/1574914016593.mp3
+server/voice/
+server/testmusic.mp3
