--- a/server/package.json
+++ b/server/package.json
@@ -20,9 +20,11 @@
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
+    "path": "^0.12.7",
     "pm2": "^3.5.1",
     "sanitize-html": "^1.20.1",
     "sequelize": "^5.19.4",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "shortid": "^2.2.15"
   }
 }
