--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
 
     <application
         android:allowBackup="true"
-        android:label="@string/app_name"
+        android:icon="@mipmap/ic_launcher_voicepaper"
+        android:label="보이스 페이퍼"
+        android:roundIcon="@mipmap/ic_launcher_voicepaper_round"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
